--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Handjet&family=Roboto+Mono:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Momentum App</title>
+    <title>TODO App</title>
   </head>
 
   <body>
