전체 코드 정리
git 첫 커밋

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Handjet&family=Roboto+Mono:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Black+Ops+One&&family=Noto+Sans+KR:wght@700&display=swap"
       rel="stylesheet"
     />
     <title>TODO App</title>
