--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Black+Ops+One&&family=Noto+Sans+KR:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>TODO App</title>
+    <title>To-do 🎄</title>
   </head>
 
   <body>
@@ -50,5 +50,6 @@
     <script src="js/backgroud.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/snow.js"></script>
   </body>
 </html>
