--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Black+Ops+One&&family=Noto+Sans+KR:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>To-do 🎄</title>
+    <title>⁕ write a To-Do ⁕</title>
   </head>
 
   <body>
@@ -31,15 +31,17 @@
       <!-- <button>Login</button> -->
       <input id="login-btn" type="submit" value="Login" />
     </form>
-    <form id="todo-form">
-      <input
-        id="input-todo"
-        type="text"
-        placeholder="Write a To Do!"
-        required
-      />
-    </form>
-    <ul id="todo-list"></ul>
+    <div class="todo">
+      <form id="todo-form">
+        <input
+          id="input-todo"
+          type="text"
+          placeholder="Write a To Do!"
+          required
+        />
+      </form>
+      <ul id="todo-list"></ul>
+    </div>
     <div id="quote">
       <span></span>
       <span></span>
