--- a/index.html
+++ b/index.html
@@ -26,19 +26,13 @@
         required
         maxlength="15"
         type="text"
-        placeholder="What is your name?"
+        placeholder="이름을 입력해주세요!"
       />
-      <!-- <button>Login</button> -->
-      <input id="login-btn" type="submit" value="Login" />
+      <input id="login-btn" type="submit" value="로그인" />
     </form>
     <div class="todo">
       <form id="todo-form">
-        <input
-          id="input-todo"
-          type="text"
-          placeholder="Write a To Do!"
-          required
-        />
+        <input id="input-todo" type="text" placeholder="작성하기" required />
       </form>
       <ul id="todo-list"></ul>
     </div>
@@ -46,6 +40,7 @@
       <span></span>
       <span></span>
     </div>
+    <script src="config/API_KEY.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
