--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </form>
     <div class="todo">
       <form id="todo-form">
-        <input id="input-todo" type="text" placeholder="작성하기" required />
+        <input id="input-todo" type="text" placeholder="오늘 할 일" required />
       </form>
       <ul id="todo-list"></ul>
     </div>
